--- a/templates/main/messages.html
+++ b/templates/main/messages.html
@@ -37,7 +37,8 @@
       </table>
     </form>
     {% else %}
-      <span>Nie masz jeszcze żadnych wiadomości</span>
+      <br />
+      <div class="alert_messages_missing">Nie masz jeszcze żadnych wiadomości</div>
     {% endif %}
   </div>
 </section>
