--- a/static/css/playerProfile.css
+++ b/static/css/playerProfile.css
@@ -176,3 +176,32 @@
         padding: 1%;
     }
 }
+.card_dark{
+    -webkit-box-shadow: 10px 10px 66px -5px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 66px -5px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 66px -5px rgba(0,0,0,0.75);
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    width:95%;
+    margin: 20px auto;
+    background-color: #C1BBA8;
+    color: #000000;
+    
+}
+.card_body{
+    
+}
+.card_title{
+    margin-bottom: 2px;
+    border-bottom: 2px solid white;
+    font-weight: bold;
+}
+.card_text{
+    font-weight: normal;
+    padding: 5px 10px;
+    text-align: justify;
+}
+.notRated{
+    color: #910500;
+}
