--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -148,9 +148,9 @@
                             <tr>
                                 <td class="medalImageField"><img class="medalImage" src="../../static/img/Medals/{{achievement.picture}}">
                                 </td>
-                                <td>„{{achievement.name}}” </td>
-                                <td>{{achievement.description}} </td>
-                                <td>+ {{achievement.points}} punktów rankingowych </td>
+                                <td><p class="medalDesc">„{{achievement.name}}” </p></td>
+                                <td><p class="medalDesc">{{achievement.description}} </p></td>
+                                <td><p class="medalDesc">+ {{achievement.points}} punktów rankingowych </p></td>
                             </tr>
                         </tbody>
                         {% endfor %}
